--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*"
-    },
-    "require-dev": {
+        "api-platform/core": "^2.7",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/flex": "^1.19",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/http-foundation": "^5.4",
+        "symfony/yaml": "5.4.*"
     },
     "config": {
         "allow-plugins": {
@@ -60,7 +60,7 @@
         "symfony": {
             "allow-contrib": false,
             "docker": false,
-            "require": "5.2.*"
+            "require": "5.4.*"
         }
     }
 }
